Fix overscroll and overflow of twig-editor

--- a/core-bundle/assets/styles/template-studio/editor-tab.pcss
+++ b/core-bundle/assets/styles/template-studio/editor-tab.pcss
@@ -51,6 +51,10 @@
                 border: 1px solid var(--blue);
             }
         }
+
+        .editor {
+            overflow: clip;
+        }
     }
 
     .relation {
